@@ -220,6 +220,13 @@ Severity   : enhancement
 Bugzilla   : 13128
 Description: add -gid, -group, -uid, -user options to lfs find
 
+Severity   : enhancement
+Bugzilla   : 15284
+Description: ll_recover_lost_found_objs - rename objects in lost+found to object ID
+Details    : OST crashes and subsequent e2fsck can lead to objects being moved
+	     to lost+found directory. Using the "ll_recover_lost_found_objs"
+	     tool, these objects can be retrieved and data can be salvaged
+	     by using the object ID saved in the fid.
 
 -------------------------------------------------------------------------------
 
